--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -8,7 +8,7 @@ body:
       value: |
         Thanks for suggesting a feature! Please provide the necessary details below to help us evaluate the request.
 
-  - type: input
+  - type: textarea
     id: description
     attributes:
       label: Feature Description
