fix template bug label and build for chrome workflow name

--- a/.github/workflows/build-web-ext.yml
+++ b/.github/workflows/build-web-ext.yml
@@ -37,5 +37,5 @@ jobs:
       - name: Install Dependencies
         run: cd web-ext && bun install
 
-      - name: Build for Firefox
+      - name: Build for Chrome
         run: cd web-ext && bun run build
