--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# MacOS
+# OS
 **/.DS_Store
+*.pem
 
 # Logs
 logs
@@ -14,8 +15,15 @@ node_modules/
 # Build
 dist
 *.zip
+build
 
 # Environment variables & secrets
 .env
 .env.local
 .env.*.local
+
+# next.js
+.vercel
+**/.next/
+**/out/
+next-env.d.ts
